--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,12 +1,3 @@
-<div *ngIf="selectedHero" >
-  <h2>{{selectedHero.name |  uppercase }} Details</h2>
-  <div><span>id: </span>{{selectedHero.id}}</div>
-  <div>
-    <label for="hero-name" >Hero name:</label>
-    <input id="hero-name" [(ngModel)]="selectedHero.name" >
-  </div>
-</div>
-
 
 <h1>List of Heroes</h1>
 
@@ -15,3 +6,5 @@
     <span class="badge">{{hero.id}}</span> {{hero.name}}
   </li>
 </ul>
+
+<app-hero-detail [hero]="selectedHero" ></app-hero-detail>
