--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -2,9 +2,22 @@
 <h1>List of Heroes</h1>
 
 <ul class="heroes" >
-  <li *ngFor="let hero of heroes" (click)="onSelect(hero)" [class.selected]= "hero === selectedHero" >
-    <span class="badge">{{hero.id}}</span> {{hero.name}}
+  <li *ngFor="let hero of heroes" >
+    <a routerLink="/detail/{{hero.id}}">
+      <span class="badge">{{hero.id}}</span> {{hero.name}}
+    </a>
   </li>
 </ul>
 
-<app-hero-detail [hero]="selectedHero" ></app-hero-detail>
+
+
+<!-- BEFORE NAVIGATION CODES -->
+
+<!-- <ul class="heroes" >
+  <li *ngFor="let hero of heroes"
+    (click)="onSelect(hero)" [class.selected]= "hero === selectedHero" >
+      <span class="badge">{{hero.id}}</span> {{hero.name}}
+  </li>
+</ul> -->
+
+<!-- <app-hero-detail [hero]="selectedHero" ></app-hero-detail> -->
